@@ -5,6 +5,7 @@
     * Fix bug triggered by certain usernames that stopped GameFOX from working
     * Fix adding or updating accounts with the account manager
     * Fix GameFOX favorites being overwritten with board lists
+    * Fix QuickPost error when making the last post of a page
 
 2011-10-15:
     * version 0.8.2
